Fix clipboard remove button alignment

--- a/app/stylesheets/alchemy/admin/clipboard.scss
+++ b/app/stylesheets/alchemy/admin/clipboard.scss
@@ -21,6 +21,8 @@
       }
 
       .button_to {
+        display: inline-flex;
+        align-items: center;
         margin-left: auto;
       }
     }
